<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/small_padding"
        android:paddingRight="@dimen/small_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instagramtitle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:layout_marginTop="@dimen/big_padding"
            android:hint="@string/login_username_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:layout_marginTop="@dimen/small_padding"
            android:hint="@string/login_password_hint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            style="@style/loginButton"
            android:text="@string/login_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            style="@style/forgotPasswordTextView"
            android:text="@string/login_forgot_password"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:src="@drawable/barra_divisora"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_login"
            android:layout_marginTop="@dimen/small_padding"
            style="@style/facebookLoginTextView"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/sign_up"
        android:background="@color/horizontal_line_color"
        android:layout_marginBottom="@dimen/small_padding"
        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        style="@style/signUpTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/small_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>